--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.cell {
+  text-align: center;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,9 +13,31 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.container {
+  float: right;
+  text-align: center;
+}
 
-.App-link {
-  color: #61dafb;
+.container2 {
+  text-align: center;
+}
+
+.redirects {
+    color: #ffffff;
+    text-decoration: none;
+    padding: 16px 10px;
+    text-align: center;
+    border: 1px solid #404040;  
+}
+
+.navbar {
+  box-sizing: border-box;
+  background-color: black;
+  padding: 24px 32px;
+  margin: 0;
+  text-align: center;
+  height: 68px;
+  min-height: 50;
 }
 
 @keyframes App-logo-spin {
